feat: forward backend error messages to frontend

--- a/apps/imgrec-ui/src/app/app.component.html
+++ b/apps/imgrec-ui/src/app/app.component.html
@@ -3,7 +3,7 @@
     <!-- <button mat-icon-button aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button> -->
-    <span class="title">Image Recognition</span>
+    <span class="title">Object Detection</span>
     
     <span class="spacer"></span>
     <div class="flex-stretch"></div>
@@ -45,7 +45,7 @@
     <button
       mat-raised-button
       color="primary"
-      (click)="openDialog()"
+      (click)="openInfoDialog()"
     >
       <mat-icon>help_outlined</mat-icon> 
       Info
