--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -1,5 +1,11 @@
 /* OUTER */
 
+mat-toolbar {
+  position: relative;
+  box-shadow: 0 0 1rem 0.1rem black;
+  z-index: 1;
+}
+
 .content {
   min-height: 100%;
   transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
@@ -10,11 +16,11 @@
 }
 
 .container {
-  margin-left: auto;
+  /* margin-left: auto;
   margin-right: auto;
   max-width: calc(100% - 2rem);
   padding-left: 1rem;
-  padding-right: 1rem;
+  padding-right: 1rem; */
 }
 
 .spinner-container {
