--- a/apps/imgrec-ui/src/app/components/video-viewer/video-viewer.component.scss
+++ b/apps/imgrec-ui/src/app/components/video-viewer/video-viewer.component.scss
@@ -1,7 +1,8 @@
 .img-container {
   position: relative;
   width: 100%;
-  height: 90vh;
+  height: calc(100vh - 64px);
+  overflow: hidden;
   
   video {
     width: 100%;
