feat: WIP: implement object-viewer for video-viewer

--- a/apps/imgrec-ui/src/app/components/video-viewer/video-viewer.component.html
+++ b/apps/imgrec-ui/src/app/components/video-viewer/video-viewer.component.html
@@ -37,3 +37,9 @@
     </fbn-object-frame>
   </div>
 </div>
+<fbn-object-viewer
+  [objectData]="objectViewerObjectData"
+  [imageSrc]="objectViewerImageDataUrl"
+  (actionClose)="toggleEnlarge()"
+>
+</fbn-object-viewer>
