--- a/apps/imgrec-ui/src/app/components/object-viewer/object-viewer.component.scss
+++ b/apps/imgrec-ui/src/app/components/object-viewer/object-viewer.component.scss
@@ -6,7 +6,7 @@
   right: 0;
   bottom: 0;
   margin: auto;
-  background-color: rgba(black, 0.9);
+  background-color: rgba(black, 0.85);
   
   & .--menu {
     display: flex;
@@ -35,5 +35,10 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+    filter:
+      drop-shadow(0 -5px 0 white)
+      drop-shadow(0 5px 0 white)
+      drop-shadow(-5px 0 0 white)
+      drop-shadow(5px 0 0 white);
   }
 }
