--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -39,8 +39,7 @@
 mat-toolbar {
   position: relative;
   z-index: 1;
-  /* box-shadow: 0 0 1rem 0.1rem black; */
-  @include fbn-background(transparent, 0);
+  box-shadow: 0 0 1rem 0.1rem black;
 }
 
 .title {
