--- a/apps/imgrec-ui/src/styles/fbn-mixins.scss
+++ b/apps/imgrec-ui/src/styles/fbn-mixins.scss
@@ -1,8 +1,11 @@
-@mixin fbn-background($border-color: rgba(white, 0.2), $border-radius: 30px) {
+@mixin fbn-background($border-radius: 30px) {
   box-shadow: 0 0 3rem 0.5rem black;
   background-color: transparent;
   border-radius: $border-radius;
-  border: 1px solid $border-color;
-  background-image: linear-gradient(rgba(#333, 0.5), rgba(#000, 0.5)), linear-gradient(to right, rgba(#333, 0.5), rgba(#000, 0.2));
+  border-left: 1px solid rgba(200, 200, 200, 0.2);
+  border-bottom: 1px solid rgba(5, 5, 5, 0.1);
+  border-right: 1px solid rgba(5, 5, 5, 0.1);
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  background-image: linear-gradient(rgba(#333, 0.7), rgba(#000, 0.7)), linear-gradient(to right, rgba(#333, 0.7), rgba(#000, 0.7));
   backdrop-filter: blur(10px);
 }
