--- a/apps/imgrec-ui/src/app/components/video-viewer/video-viewer.component.html
+++ b/apps/imgrec-ui/src/app/components/video-viewer/video-viewer.component.html
@@ -38,6 +38,7 @@
   </div>
 </div>
 <fbn-object-viewer
+  *ngIf="objectViewerImageDataUrl"
   [objectData]="objectViewerObjectData"
   [imageSrc]="objectViewerImageDataUrl"
   (actionClose)="toggleEnlarge()"
