--- a/apps/imgrec-ui/src/styles/styles.scss
+++ b/apps/imgrec-ui/src/styles/styles.scss
@@ -64,3 +64,18 @@ body {
 .mat-error {
   color: mat.get-color-from-palette($fbn-warn, 500);
 }
+
+.spinner-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  
+  background-color: rgba(white, 0.5);
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+}
