--- a/apps/imgrec-ui/src/app/components/object-viewer/object-viewer.component.html
+++ b/apps/imgrec-ui/src/app/components/object-viewer/object-viewer.component.html
@@ -1,12 +1,13 @@
 <div
-  *ngIf="imageSrc"
+  *ngIf="objectData"
+  @rowCollapseAnimation
   #objectViewerContainer
   class="object-viewer"
-  @rowCollapseAnimation
-  (@rowCollapseAnimation.done)="this.hasLoaded.emit(true)"
+>
+  <div
+    class="--menu"
   >
-  <div class="--menu">
-    <h2 class="--title">{{ objectData?.class_name }}</h2>
+    <h2 class="--title">{{ objectData.class_name }}</h2>
     <button
       mat-icon-button
       (click)="close()"
@@ -15,11 +16,21 @@
     </button>
   </div>
   <div
+    *ngIf="imageSrc"
+    @rowCollapseAnimation
     class="--container"
   >
     <img
-      [src]="imageSrc" alt="uploaded image"
       class="--image"
+      [src]="imageSrc"
+      alt="uploaded image"
     >
+  </div>
+
+  <div
+    *ngIf="!imageSrc"
+    class="spinner-container"
+  >
+    <mat-spinner></mat-spinner>
   </div>
 </div>
