--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -11,14 +11,6 @@
   position: relative;
 }
 
-.container {
-  /* margin-left: auto;
-  margin-right: auto;
-  max-width: calc(100% - 2rem);
-  padding-left: 1rem;
-  padding-right: 1rem; */
-}
-
 /* INNER */
 
 mat-toolbar {
@@ -27,9 +19,11 @@ mat-toolbar {
   box-shadow: 0 0 1rem 0.1rem black;
 }
 
-.title {
+a.title {
   margin-left: 1rem;
   margin-right: 1rem;
+  text-decoration: none;
+  color: inherit;
 }
 
 .spacer {
