--- a/apps/imgrec-ui/src/styles/styles.scss
+++ b/apps/imgrec-ui/src/styles/styles.scss
@@ -43,6 +43,7 @@ $dark-theme: mat.define-dark-theme((
 /* GLOBAL INCLUDES */
 @include mat.typography-hierarchy($default-typography);
 @include mat.all-component-themes($light-theme);
+@include mat.all-component-densities(-2);
 
 html, body {
   height: 100%;
@@ -62,4 +63,19 @@ body {
 
 .mat-error {
   color: mat.get-color-from-palette($fbn-warn, 500);
+}
+
+.spinner-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  
+  background-color: rgba(white, 0.5);
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
 }
