--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -2,7 +2,7 @@
 
 /* OUTER */
 
-.content {
+.app-container {
   min-height: 100%;
   transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
 }
@@ -42,5 +42,37 @@ a.title {
     align-items: center;
     height: 60px;
     padding: 0 1rem;
+  }
+}
+
+.info-overlay {
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & .--menu {
+    display: flex;
+    height: 3.5rem;
+    justify-content: end;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    width: calc(100% - 2rem);
+  }
+
+  & .--content {
+    display: flex;
+    flex-direction: column;
+    max-width: var(--content-max-width);
+    font-size: 120%;
+
+    & ul {
+      margin-top: 0;
+    }
   }
 }
