--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -1,9 +1,11 @@
 @import '../styles/fbn-mixins';
 
-/* OUTER */
+
+/* OUTER ********************************************************************* */
 
 .app-container {
-  min-height: 100%;
+  height: 100%;
+  overflow: hidden;
   transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
 }
 
@@ -11,7 +13,10 @@
   position: relative;
 }
 
-/* INNER */
+
+/* INNER ********************************************************************* */
+
+/* MAIN NAV BAR ************************************************************** */
 
 mat-toolbar {
   position: relative;
@@ -34,9 +39,9 @@ a.title {
   display: flex;
   align-content: center;
   align-items: center;
-  margin-left: 2rem;
+  margin-left: 1rem;
   
-  & .__togge-container {
+  & .__toggle-container {
     display: flex;
     align-content: center;
     align-items: center;
@@ -44,6 +49,33 @@ a.title {
     padding: 0 1rem;
   }
 }
+
+
+/* SIDE NAV FOR MOBILE ******************************************************** */
+
+.sidenav-container {
+  height: calc(100vh - 64px);
+
+  & .sidenav-menu {
+    display: flex;
+    flex-direction: column;
+    padding: 0 1rem;
+    min-height: 100%;
+
+    & > * + * {
+      margin-top: 1rem;
+    }
+  }
+
+  & .sidenav-content {
+    display: flex;
+    flex-direction: column;
+    padding: 0 1rem;
+  }
+}
+
+
+/* INFO OVERLAY *************************************************************** */
 
 .info-overlay {
   position: absolute;
@@ -59,7 +91,7 @@ a.title {
   & .--menu {
     display: flex;
     height: 3.5rem;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
     padding: 0.5rem 1rem;
     width: calc(100% - 2rem);
