--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -20,7 +20,7 @@
 
 mat-toolbar {
   position: relative;
-  z-index: 2;
+  z-index: 3;
   box-shadow: 0 0 1rem 0.1rem black;
 }
 
@@ -33,6 +33,12 @@ a.title {
 
 .spacer {
   flex: 1 1 auto;
+}
+
+.button-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .toolbar-section {
@@ -71,6 +77,12 @@ a.title {
     display: flex;
     flex-direction: column;
     padding: 0 1rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .sidenav {
+    width: 100%;
   }
 }
 
