--- a/apps/imgrec-ui/src/app/app.component.scss
+++ b/apps/imgrec-ui/src/app/app.component.scss
@@ -62,6 +62,7 @@ a.title {
 /* SIDE NAV FOR MOBILE ******************************************************** */
 
 .sidenav-container {
+  overflow: hidden;
   height: calc(100vh - 64px);
 
   & .sidenav-menu {
