--- a/apps/imgrec-ui/src/app/components/video-viewer/video-viewer.component.html
+++ b/apps/imgrec-ui/src/app/components/video-viewer/video-viewer.component.html
@@ -11,6 +11,7 @@
     autoplay
     loop
     [muted]="true"
+    playsinline
     [class.--blur]="objectFrameIsHovered || objectFrameIsEnlarged"
   >
     <source [src]="config?.videoUrl" type="video/mp4">
