Feature: mobile-ready (#2)
* feat: implement extended info overlay

* feat: implement side navigation

* feat: finalize mobile tool bar

* fix: mobile style improvements

* fix: prepare for incompatible browser engine

* fix: adjust mobile nav for UX and resilience

--- a/apps/imgrec-ui/src/app/app.component.html
+++ b/apps/imgrec-ui/src/app/app.component.html
@@ -1,8 +1,82 @@
-<div class="content mat-app-background" [class.dark-theme]="isDarkTheme">
+<!-- MENU BUTTON TEMPLATE -->
+<ng-template #menuButtons>
+  <!-- UPLOAD FILE -->
+  <input
+    #fileInput
+    hidden="true"
+    type="file"
+    [accept]="videoFunctionalityBrowserSupport ? 'image/jpg, video/mp4' : 'image/jpg'"
+    (change)="fileInputChange($event)"
+  />
+  <button
+    mat-raised-button
+    color="primary"
+    title="Let AI perform Object Detection on your uploaded JPG or MP4 file"
+    (click)="fileInput.click()"
+  >
+    <mat-icon>upload</mat-icon>
+    Upload file for Object Detection
+  </button>
+
+  <!-- RESTART -->
+  <button
+    mat-raised-button
+    color="primary"
+    aria-label="Redo"
+    (click)="initDemoVideo()"
+  >
+    <mat-icon>play_arrow_outlined</mat-icon>
+    Restart demo
+  </button>
+
+  <!-- EMPTY -->
+  <button
+    mat-raised-button
+    color="primary"
+    aria-label="Redo"
+    (click)="reset()"
+  >
+    <mat-icon>close</mat-icon>
+    Empty View
+  </button>
+
+  <!-- HELP -->
+  <button
+    mat-raised-button
+    color="primary"
+    (click)="openInfo()"
+  >
+    <mat-icon>help_outlined</mat-icon> 
+    Info
+  </button>
+
+  <!-- TOGGLE DARK MODE -->
+  <section class="toolbar-section">
+    <mat-icon>light_mode</mat-icon>
+    <div class="__toggle-container">
+      <mat-slide-toggle
+        color="primary"
+        [checked]="isDarkTheme"
+        (change)="themeToggleChange($event)">
+      </mat-slide-toggle>
+    </div>
+    <mat-icon>bedtime</mat-icon>
+  </section>
+</ng-template>
+
+<!-- APP COMPONENT -->
+<div class="app-container mat-app-background" [class.dark-theme]="isDarkTheme">
+
+  <!-- TOOL BAR DESKTOP -->
   <mat-toolbar color="primary">
-    <!-- <button mat-icon-button aria-label="Example icon-button with menu icon">
+    <button
+      mat-icon-button
+      class="hidden-xs"
+      aria-label="Application menu button"
+      (click)="sideNavClicked()"
+    >
       <mat-icon>menu</mat-icon>
-    </button> -->
+    </button>
     <a
       class="title"
       href="/"
@@ -13,76 +87,105 @@
     <span class="spacer"></span>
     <div class="flex-stretch"></div>
 
-    <!-- UPLOAD FILE -->
-    <input #fileInput hidden="true" type="file" onclick="this.value=null" (change)="fileInputChange($event)" accept="image/jpg, video/mp4"/>
-    <button
-      mat-raised-button
-      color="primary"
-      title="Let AI perform Object Detection on your uploaded JPG or MP4 file"
-      (click)="fileInput.click()"
-    >
-      <mat-icon>upload</mat-icon>
-      Upload file for Object Detection
-    </button>
-
-    <!-- RESET -->
-    <button
-      mat-raised-button
-      color="transparent"
-      aria-label="Redo"
-      (click)="reset()"
-    >
-      <mat-icon>refresh</mat-icon>
-      Reset
-    </button>
-
-    <!-- HELP -->
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="openInfoDialog()"
-    >
-      <mat-icon>help_outlined</mat-icon> 
-      Info
-    </button>
-
-    <!-- TOGGLE DARK MODE -->
-    <section class="toolbar-section">
-      <mat-icon>light_mode</mat-icon>
-      <div class="__togge-container">
-        <mat-slide-toggle
-          color="primary"
-          [checked]="isDarkTheme"
-          (change)="themeToggleChange($event)">
-        </mat-slide-toggle>
-      </div>
-      <mat-icon>bedtime</mat-icon>
-    </section>
+    <div class="button-bar hidden-sm">
+      <ng-container [ngTemplateOutlet]="menuButtons">
+      </ng-container>
+    </div>
   </mat-toolbar>
 
   <div class="wrapper">
-    <div class="container">
-      <fbn-image-viewer
-        *ngIf="imageUrl$ | async"
-        [isLoading]="(isLoading$ | async) || false"
-        [config]="imageViewerConfig"
-      >
-      </fbn-image-viewer>
 
-      <fbn-video-viewer
-        *ngIf="videoUrl$ | async"
-        [isLoading]="(isLoading$ | async) || false"
-        [config]="videoViewerConfig"
-      >
-      </fbn-video-viewer>
-    </div>
-
-    <div
-      *ngIf="isLoading$ | async"
-      class="spinner-container"
-      @rowCollapseAnimation
+    <!-- TOOL BAR MOBILE -->
+    <mat-sidenav-container
+      class="sidenav-container"
     >
-      <mat-spinner></mat-spinner>
-    </div>
+      <mat-sidenav
+        class="sidenav"
+        color="primary"
+        mode="push"
+        (openedChange)="sideNavOpenedChange($event)"
+      >
+        <div class="sidenav-menu">
+          <ng-container [ngTemplateOutlet]="menuButtons"></ng-container>
+        </div>
+      </mat-sidenav>
+      <mat-sidenav-content class="sidenav-content">
+        <!-- SIDENAV CONTENT -->
+        <div class="container">
+          <fbn-image-viewer
+            *ngIf="imageUrl$ | async"
+            [isLoading]="(isLoading$ | async) || false"
+            [config]="imageViewerConfig"
+          >
+          </fbn-image-viewer>
+    
+          <fbn-video-viewer
+            *ngIf="videoFunctionalityBrowserSupport && (videoUrl$ | async)"
+            [isLoading]="(isLoading$ | async) || false"
+            [config]="videoViewerConfig"
+          >
+          </fbn-video-viewer>
+        </div>
+    
+        <div
+          *ngIf="isLoading$ | async"
+          class="spinner-container"
+          @rowCollapseAnimation
+        >
+          <mat-spinner></mat-spinner>
+        </div>
+    
+        <!-- INFO OVERLAY -->
+        <div
+          *ngIf="showInfoOverlay"
+          @rowCollapseAnimation
+          class="info-overlay mat-app-background"
+          [class.dark-theme]="isDarkTheme"
+        >
+          <div
+            class="--menu"
+          >
+            <button
+              mat-icon-button
+              (click)="showInfoOverlay = false"
+            >
+              <mat-icon>close</mat-icon>
+            </button>
+          </div>
+    
+          <div class="--content">
+            <h1>Demo Application for Machine Learning-based Object Detection</h1>
+            
+            <h2>How to use</h2>
+            <p>
+              Upload a JPG or MP4 file to have Object Detection performed on it.
+              The AI will draw bounding boxes around the detected objects. Clicking or tapping on a bounding box will show enlarge the detected object.
+            </p>
+            <br>
+            
+            <h2>Disclamer</h2>
+            <p>
+              This is a demo application for demonstration and educational purposes only. It is not intended for production use or any real-world application.
+              The authors do not take any responsibility for the correctness of the results or any other damages caused by the use of this application.
+            </p>
+            <br>
+    
+            <h2>Uploaded data</h2>
+            <p>
+              Files uploaded are not processed in any other way except for the purposes of this app.
+              Image files are not stored on the server and are only processed in the browser.
+              Video files are stored on the server for the duration of the processing and are deleted afterwards.
+            </p>
+            
+            <h2>Authors</h2>
+            <ul>
+              <li><a href="https://www.linkedin.com/in/philip-schulz-klingauf-1a10ba126/" target="_blank">Philip Schulz-Klingauf</a></li>
+              <li><a href="https://www.linkedin.com/in/niklas-unverricht-7494a8198/" target="_blank">Niklas Unverricht</a></li>
+            </ul>
+          </div>
+        </div>
+      </mat-sidenav-content>
+    </mat-sidenav-container>
+
   </div>
 </div>
